--- a/_includes/services.html
+++ b/_includes/services.html
@@ -39,7 +39,7 @@
                     <h3 class="section-subheading text-muted">Planned chapters are introduced below as well as schedule. </h3>
                 </div>
             </div>
-            <div class="intro-text">
+            <div class="intro-text text-center">
                 
                 <a href="https://jarkkomoilanen.typeform.com/to/KmeSPv" target="new" class="page-scroll btn btn-xl" style="color:#000;">Join mailing list!</a>
             </div>
