--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -32,5 +32,11 @@
                     <h3 class="section-subheading text-muted">The list will grow as the work goes forward and <b>new chapters are introduced around every second week.</b></h3>
                 </div>
             </div>
+            <div class="row">
+                <div class="intro-text text-center">
+                    
+                    <a href="https://jarkkomoilanen.typeform.com/to/KmeSPv" target="new" class="page-scroll btn btn-xl" style="color:#000;">Join mailing list!</a>
+                </div>
+            </div>
         </div>
     </section>
