--- a/_includes/about.html
+++ b/_includes/about.html
@@ -93,7 +93,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publishing</h2>
-                    <h3 class="section-subheading text-muted">Publishing plan is not fixed yet, but I have plan A, B and C. In plan A, some international publishing house accepts the text and publishes it. If that fails, I'll go for plan B which is self-publishing (all marketing has to be done self). If even that fails, I'll just add CC license to the text and push it out as PDF file. No matter what happens, content will be published. Help in getting in touch with international publishers would be appreciated.</h3>
+                    <h3 class="section-subheading text-muted">Publishing plan is not fixed yet, but I have plan A, B and C. In plan A, some international publishing house accepts the text and publishes it. If that fails, I'll go for plan B which is self-publishing (most likely and via leanpub). If even that fails, I'll just add CC license to the text and push it out as PDF file. </h3>
+                    <h3 class="section-subheading text-muted">No matter what happens, content will be published. Help in getting in touch with international publishers would be appreciated.</h3>
                 </div>
             </div>
         </div>
