--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,6 +51,9 @@
                 <div class="intro-lead-in">Book about Application Developers as Customers in API Economy</div>
                 
                 <a href="#themes" class="page-scroll btn btn-xl" style="color:#000;">What's included?</a>
+                <a href="https://leanpub.com/buildfordevelopers" target="new" class="page-scroll btn btn-xl" style="color:#000;">Buy it now!</a>
+
+                
             </div>
         </div>
     </header>
