--- a/_includes/about.html
+++ b/_includes/about.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <h3 class="section-subheading text-muted">First chapters will be available soon to give you a glimpse of what's coming. </h3>
-                    <a href="https://leanpub.com/buildfordevelopers" target="new" class="page-scroll btn btn-xl" style="color:#000;">Buy it now!</a>
+                    <a href="https://leanpub.com/buildfordevelopers" target="new" class="page-scroll btn btn-xl" style="color:#000;">Preview & buy it now!</a>
                 </div>
             </div>
         </div>
