--- a/_includes/about.html
+++ b/_includes/about.html
@@ -97,7 +97,7 @@
                 
                     <h3 class="section-subheading text-muted">First chapters will be available soon to give you a glimpse of what's coming. </h3>
                     <a href="https://leanpub.com/buildfordevelopers" target="new" class="page-scroll btn btn-xl" style="color:#000;">Preview & buy it now!</a>
-                    <img class="img-responsive" src="img/3d.png" alt="">
+                    <img class="img-responsive" style="display:block;margin:auto;" src="img/3d.png" alt="">
                 </div>
             </div>
         </div>
