--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,9 +33,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" style="background-color: #571717;" target="new" href="https://medium.com/build-for-developers">Blog</a>
-                    </li> -->
+                    <li>
+                        <a class="page-scroll" style="background-color: #571717;" target="new" href="https://spectrum.chat/buildfordevelopers">Discuss</a>
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
